projects/qbsf/deployment-package-fixed/force-app/main/default/objects/QB_Integration_Settings__c/QB_Integration_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for QuickBooks integration</description>
    <label>QB Integration Settings</label>
</CustomObject>