projects/qbsf/deployment-package-fixed/force-app/main/default/objects/QB_Integration_Settings__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>API Key for middleware authentication</description>
    <inlineHelpText>The API key for authenticating with the middleware service</inlineHelpText>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>