projects/qbsf/deployment-package-fixed/force-app/main/default/objects/QB_Integration_Settings__c/fields/Middleware_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Middleware_Endpoint__c</fullName>
    <description>Middleware endpoint URL for QuickBooks integration</description>
    <inlineHelpText>The URL of the middleware service for QuickBooks integration</inlineHelpText>
    <label>Middleware Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>