projects/qbsf/deployment-package-fixed/force-app/main/default/objects/QB_Integration_Settings__c/fields/QB_Realm_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_Realm_ID__c</fullName>
    <description>QuickBooks Realm ID for API access</description>
    <inlineHelpText>The QuickBooks company realm ID for API access</inlineHelpText>
    <label>QB Realm ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>